# llama2.hs

./: .gitignore  README.md  TODO.txt  cabal.project.freeze  llama2.cabal  run  run.c
.devcontainer/: devcontainer.json
.github/workflows/: haskell.yml
project/app/: Main.hs
project/llama2/: Architecture.hs  DebugDump.hs  DiagnosisMain.hs  Helpers.hs  Main.hs  Model.hs  Primitives.hs  Tokenizer.hs  Transformer.hs  Types.hs
project/llama2/Model/: Attention.hs  Cache.hs  Layer.hs  Top.hs  Types.hs
project/llama2/Model/Core/: IntermediateData.hs  PipelineController.hs  Transformer.hs  Types.hs
project/llama2/Model/Core/Transformer/: Internal.hs
project/llama2/Model/Embedding/: PRNG.hs  TokenEmbedding.hs
project/llama2/Model/Layers/: TransformerLayer.hs
project/llama2/Model/Layers/Attention/: AttentionHead.hs  AttentionHeadComb.hs  CacheController.hs  MultiHeadAttention.hs
project/llama2/Model/Layers/Attention/MultiHeadAttention/: Internal.hs
project/llama2/Model/Layers/FeedForward/: FeedForwardNetwork.hs
project/llama2/Model/Layers/FeedForward/FeedForwardNetwork/: Internal.hs
project/llama2/Model/Memory/: Addressing.hs  KVCacheBank.hs  RamOps.hs
project/llama2/Model/Top/: InferenceLoop.hs  Transformer.hs
test/: Spec.hs
test/Model/Layers/: TransformerLayerSpec.hs
test/Model/Layers/Attention/: AttentionHeadSpec.hs  MultiHeadAttentionSpec.hs
test/Model/Layers/FeedForward/: FeedForwardNetworkSpec.hs
tools/: concat.bash
