cabal-version:  3.4

name:           llama2
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/chris-ch/llama2.hs#readme>
homepage:       https://github.com/chris-ch/llama2.hs#readme
bug-reports:    https://github.com/chris-ch/llama2.hs/issues
author:         Christophe Alexandre
maintainer:     christophe.alexandre@pm.me
category:       LLM
copyright:      2023 Christophe Alexandre
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/chris-ch/llama2.hs


executable llama2
  main-is: Main.hs
  hs-source-dirs:
      project/llama2
  build-depends: base,
    array,
    binary,
    bytestring,
    containers,
    deepseq,
    directory,
    filepath,
    linear,
    matrices,
    mtl,
    optparse-applicative,
    parallel,
    primitive,
    random,
    split,
    text,
    time,
    transformers,
    vector
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -O2
    -threaded
    -haddock
  default-language: Haskell2010

